project1_part_b/matrixmult-50843121.err

The following have been reloaded with a version change:
  1) gcc/4.8.5 => gcc/11.4.0


Currently Loaded Modules:
  1) StdEnv   2) gcc/11.4.0   3) openblas/0.3.20

 

dgemm-blocked.c: In function 'square_dgemm':
dgemm-blocked.c:23:3: error: expected ',' or ';' before 'for'
   23 |   for (int i = 0; i < n; i += block_size1) {
      |   ^~~
dgemm-blocked.c:23:19: error: 'i' undeclared (first use in this function)
   23 |   for (int i = 0; i < n; i += block_size1) {
      |                   ^
dgemm-blocked.c:23:19: note: each undeclared identifier is reported only once for each function it appears in
dgemm-blocked.c:23:42: error: expected ';' before ')' token
   23 |   for (int i = 0; i < n; i += block_size1) {
      |                                          ^
      |                                          ;
dgemm-blocked.c:23:42: error: expected statement before ')' token
make: *** [Makefile:46: dgemm-blocked.o] Error 1
/var/spool/slurm/slurmd/state/job50843121/slurm_script: line 23: ./benchmark-blocked: No such file or directory
/var/spool/slurm/slurmd/state/job50843121/slurm_script: line 26: ./benchmark-blas: No such file or directory
slurmstepd: error: *** JOB 50843121 ON eu-a2p-485 CANCELLED AT 2024-03-11T11:58:45 ***
